# canny_edge_ros

./: README.md
canny_edge_my_face/: CMakeLists.txt  package.xml
canny_edge_my_face/launch/: canny_edge_my_face.launch
canny_edge_my_face/src/: canny_edge_my_face_node.cpp
cv_camera/: CMakeLists.txt  package.xml
cv_camera/src/: cv_camera_node.cpp
